hphp/test/slow/inout/bad-func.php.expectf

Fatal error: syntax error, unexpected T_INOUT in %s/bad-func.php on line 3
